Dist function revision

--- a/project/save-mhtml/chrome_extension/static/test.html
+++ b/project/save-mhtml/chrome_extension/static/test.html
@@ -37,29 +37,15 @@
         ;asldkfjvbn;awlefjva;wlsdfvkjna;sldfvkhajs;dlfvkhasdj;vflhkasdfj;aslehfiuaew;falskvjdf;aslkdfvjas;lefvjasd;lfvhas;dvflj</span>
     </div>
     <div style="height:400px;">1
-      <!-- <span>
-        왜용
+      <span>
         asdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;sl
-        왜용
-        asdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;sl왜용
-        asdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;slasdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;sl
-
       </span>
       <span
-        class="target">타겟asdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;sl</span> -->
+        class="target">asdfasdfasdf;lkjasd;flkjawse;flkasjeef;laksejdfv;laskedjfvn;asldkfjvbn;awlefjva;wlsdfvkjna;sl</span>
     </div>
     <div style="height:400px;">2
       <a href="#">Link2</a>
       <a href="#">Link21</a>
-      <a href="#">Link22</a>
-      <a href="#">Link23</a>
-      <a href="#">Link21</a>
-      <a href="#">Link22</a>
-      <a href="#">Link23</a><a href="#">Link21</a>
-      <a href="#">Link22</a>
-      <a href="#">Link23</a><a href="#">Link21</a>
-      <a href="#">Link22</a>
-      <a href="#">Link23</a><a href="#">Link21</a>
       <a href="#">Link22</a>
       <a href="#">Link23</a></div>
     <div style="height:400px;">3
