--- a/project/save-mhtml/chrome_extension/src/popup/popup.html
+++ b/project/save-mhtml/chrome_extension/src/popup/popup.html
@@ -8,6 +8,7 @@
     .btn {
       width: 300px;
     }
+
     .arrow {
       width: 100%;
     }
@@ -44,16 +45,25 @@
       <h5 class="card-title">Curation</h5>
       <div>
         <a class="btn btn-outline-primary start" href="#">start</a>
-      </div>      
-      <div class="btn-group" role="group" aria-label="Curation Control">
-        <a class="btn btn-outline-primary arrow prev" href="#">prev</a>
-        <a class="btn btn-outline-primary arrow next" href="#">next</a>
+        <a class="btn btn-outline-secondary start-auto" href="#">start-auto</a>
+      </div>
+      <div>
+        <a class="btn btn-outline-primary test" href="#">TEST</a>
+      </div>
+      <div>
+        <div class="btn-group" role="group" aria-label="Curation Control">
+          <a class="btn btn-outline-primary arrow prev" href="#">prev</a>
+          <a class="btn btn-outline-primary arrow next" href="#">next</a>
+        </div>
       </div>
     </div>
   </div>
-  <div class="card">
+  <div class="card" id="extractor-card">
     <div class="card-body">
       <h5 class="card-title">Extractor</h5>
+      <div>
+        <a class="btn btn-outline-primary" id="all" href="#">Run ALL</a>
+      </div>
       <div>
         <a class="btn btn-outline-primary" id="readability" href="#">readability</a>
       </div>
