--- a/project/save-mhtml/chrome_extension/src/popup/popup.html
+++ b/project/save-mhtml/chrome_extension/src/popup/popup.html
@@ -72,6 +72,14 @@
       </div>
     </div>
   </div>
+  <div class="card" id="test-card">
+    <div class="card-body">
+      <h5 class="card-title">Test Board</h5>
+      <div>
+        <a class="btn btn-outline-primary all" href="#">Test ALL</a>
+      </div>
+    </div>
+  </div>
   <script src="popup.ts"></script>
 </body>
 
