--- a/project/save-mhtml/chrome_extension/src/popup/popup.html
+++ b/project/save-mhtml/chrome_extension/src/popup/popup.html
@@ -33,11 +33,11 @@
     <div class="card-body">
       <h5 class="card-title">Crawler</h5>
       <div>
-        <a class="btn btn-outline-primary" id="save" href="#">save</a>
+        <a class="btn btn-outline-primary" id="save" href="#">Crawl ALL</a>
       </div>
-      <div>
+      <!-- <div>
         <a class="btn btn-outline-primary" id="saveNow" href="#">just saving!</a>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="card" id="curation-card">
